[package]
name = "message"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
description = "Build email messages in rust"
readme = "README.md"
homepage = "https://github.com/async-email/message"
repository = "https://github.com/async-email/message"
license = "MIT/Apache-2.0"

[dependencies]
thiserror = "1.0.20"
mime = "0.3.16"
lazy_static = "1.4.0"
regex = "1.3.9"
uuid = { version = "0.8.1", features = ["v4"] }
time = { version = "0.2.16", default-features = false, features = ["std"] }
serde_crate = { package = "serde", version = "1.0", features = ["derive"], optional = true }
email = { path = "../deltachat/rust-email" }
anyhow = "1.0.32"
fast_chemail = "0.9.6"
base64 = "0.12.3"

[features]
default = []
serde = ["serde_crate", "time/serde"]

